@startuml overview

interface Composite{
    +id
    +objectType
}

' Database
'---------

interface Database {
    +constructorByObjectType
    +accessControlById
}
Database o-- MetaPopulation

Composite <|-- DatabaseObject
interface DatabaseObject {
    +version
    +roleByRoleTypeId
}
DatabaseObject --> Database

' Workspace
'---------

interface Workspace {
}
Workspace o-- Database

Composite <|-- WorkspaceObject
interface WorkspaceObject {
}
WorkspaceObject o-- Workspace
WorkspaceObject o-- DatabaseObject


' Session
'---------

interface Session {
    +hasChanges
}
Session o-- Database

Composite <|-- SessionObject
interface SessionObject {
    +newId
    +version
    +isNew
    +hasChanges
}
SessionObject o-- Session
SessionObject o-- DatabaseObject

together {
    class Database
    class DatabaseObject
}

together {
    class Workspace
    class WorkspaceObject
}

together {
    class Session
    class SessionObject
}

@enduml
